<resources>
    <string name="app_name" translatable="false">Go4Lunch</string>
    <string name="slogan">Find a nice restaurant and invite your co-workers for lunch !</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">305456056845566</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb305456056845566</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_map">Map View</string>
    <string name="bottom_navigation_menu_restaurant">List View</string>
    <string name="bottom_navigation_menu_workmates">Workmates</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="your_lunch">Your Lunch</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="NoRestaurant">No Restaurant</string>
    <string name="call">Call</string>
    <string name="like">Like</string>
    <string name="website">Website</string>

</resources>
